UI: fix icon alignment

--- a/public/css/tagrendering.css
+++ b/public/css/tagrendering.css
@@ -40,6 +40,8 @@
 .mapping-icon-small {
     /* A mapping icon type */
     width: 1.5rem;
+    height: fit-content;
+
     max-height: 1.5rem;
     margin-right: 0.5rem;
 }
@@ -47,19 +49,19 @@
 .mapping-icon-medium {
     /* A mapping icon type */
     width: 3rem;
+    height: fit-content;
     max-height: 3rem;
-    margin-right: 1rem;
-    margin-left: 0.5rem;
+    margin-right: 1rem
 }
 
 .mapping-icon-large {
     /* A mapping icon type */
     width: 6rem;
+    height: fit-content;
     max-height: 5rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     margin-right: 1.5rem;
-    margin-left: 0.5rem;
 }
 
 
